# Ts3EzApi

./: Cargo.toml  LICENSE  README.md  log.txt  output.pkf  pcm2wav.bat  test.pcm
Client/: test_c.py  web.html
Nginx/nginx-windows/: stop.bat
Nginx/nginx-windows/conf/: nginx.conf
src/: main.rs
src/audio_stream_utils/: mod.rs  ts_to_audio_nosdl.rs
src/audio_utils/: mod.rs  ts_to_audio.rs
tsclientlib/src/: audio.rs
utils/tsproto-structs/declarations/: Badges.csv
